src/objects/Sub_Findings__c.object
<CustomObject>
    <fields>
        <fullName>CNCS_Concurrence__c</fullName>
        <label>CNCS Concurrence</label>
        <picklist>
            <picklistValues>
                <fullName>CNCS Concurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNCS Partially Concurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNCS Does Not Concur</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrective Action Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Taken__c</fullName>
        <inlineHelpText>Describe in detail corrective actions taken to address finding and auditor recommendations.</inlineHelpText>
        <label>Corrective Action Taken</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Finding_Category__c</fullName>
        <label>Finding Category</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal History Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Timekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member/Volunteer Timekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unallowable Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect/Administrative Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member/Volunteer Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member/Volunteer Eligibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Finding_Number__c</fullName>
        <label>Finding Number</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finding_Summary__c</fullName>
        <label>Finding Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Findings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Findings</label>
        <referenceTo>Findings__c</referenceTo>
        <relationshipLabel>Sub Findings</relationshipLabel>
        <relationshipName>Sub_Findings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OIG_Auditor_Recommendation__c</fullName>
        <label>OIG Auditor Recommendation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Findings__c</fullName>
        <label>Other Findings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_NSCHC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related to NSCHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Audit_Number__c</fullName>
        <label>Unique Audit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sub Findings</label>
    <nameField>
        <displayFormat>SFID-{0000}</displayFormat>
        <label>Sub Findings ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Corrective_Action_Taken_must_be_entered</fullName>
        <active>false</active>
        <description>Corrective Action Taken must be entered if a finding number is entered</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Finding_Number__c)) 
, LEN(Corrective_Action_Taken__c) =0)</errorConditionFormula>
        <errorDisplayField>Corrective_Action_Taken__c</errorDisplayField>
        <errorMessage>Corrective Action Taken must be entered if a finding number is entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Validation_on_Finding_Number</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
LEN (Finding_Number__c) = 0, 
REGEX(Finding_Number__c, &quot;[0-9]{2}&quot;) 
))</errorConditionFormula>
        <errorDisplayField>Finding_Number__c</errorDisplayField>
        <errorMessage>Must enter only two numbers between {0-9}</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Findings_Required</fullName>
        <active>true</active>
        <description>If “Other” is selected as a finding, a response must be entered in the “Other Findings” textbox.</description>
        <errorConditionFormula>AND( 
INCLUDES (Finding_Category__c , &quot;Other&quot;), 
ISBLANK(Other_Findings__c) 
)</errorConditionFormula>
        <errorDisplayField>Other_Findings__c</errorDisplayField>
        <errorMessage>If “Other” is selected as a finding, a response must be entered in the “Other Findings” textbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Finding_Number_Required</fullName>
        <active>true</active>
        <description>A finding number must be entered if a Finding Category is selected.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Finding_Category__c)),ISBLANK( Finding_Number__c ))</errorConditionFormula>
        <errorDisplayField>Finding_Number__c</errorDisplayField>
        <errorMessage>A finding number must be entered if a Finding Category is selected.</errorMessage>
    </validationRules>
</CustomObject>